--- a/block1_izmailov/package.xml
+++ b/block1_izmailov/package.xml
@@ -12,6 +12,8 @@
   <depend>rclcpp</depend>
   <depend>rrm_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
