--- a/block2_izmailov/CMakeLists.txt
+++ b/block2_izmailov/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(trajectory_interface REQUIRED)
 
 include_directories(
   include
@@ -20,10 +21,18 @@ include_directories(
 )
 
 add_executable(trajectory_visualization src/trajectory_visualization.cpp)
-ament_target_dependencies(trajectory_visualization "rclcpp" "sensor_msgs")
+ament_target_dependencies(trajectory_visualization "rclcpp" "sensor_msgs" "trajectory_interface")
+
+add_executable(trajectory_computation src/trajectory_computation.cpp)
+ament_target_dependencies(trajectory_computation "rclcpp" "sensor_msgs" "trajectory_interface")
 
 install(TARGETS
   trajectory_visualization
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(TARGETS
+  trajectory_computation
   DESTINATION lib/${PROJECT_NAME}
 )
 
