--- a/block2_izmailov/package.xml
+++ b/block2_izmailov/package.xml
@@ -11,6 +11,7 @@
   <depend>sensor_msgs</depend>
   <build_depend>rclcpp</build_depend>
   <depend>Eigen3</depend>
+  <build_depend>trajectory_interface</build_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
